renamed to omnibridge

--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Multi Token Bridge" />
+        <meta name="description" content="ETH-to-xDai multi-token bridge" />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -38,7 +38,7 @@
         />
         <meta name="msapplication-TileColor" content="#EEFFFD" />
         <meta name="theme-color" content="#EEF4FD" />
-        <title>Multi Token Bridge</title>
+        <title>OmniBridge</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
