bug fixes, env changes

--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="title" content="OmniBridge" />
     <meta name="description" content="%REACT_APP_DESCRIPTION%" />
     <link
       rel="apple-touch-icon"
@@ -32,10 +33,7 @@
     <meta property="og:description" content="%REACT_APP_DESCRIPTION%" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="%PUBLIC_URL%/favicon-32x32.png"
-    />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>OmniBridge</title>
