ci: setup ci to publish to gh-pages

--- a/packages/dapp/public/index.html
+++ b/packages/dapp/public/index.html
@@ -36,7 +36,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/favicon-32x32.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>OmniBridge</title>
+    <title>Mask Bridge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
