--- a/packages/dapp/public/index.html
+++ b/packages/dapp/public/index.html
@@ -42,5 +42,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script async src="https://coinzillatag.com/lib/display.js"></script>
   </body>
 </html>
