--- a/packages/dapp/public/index.html
+++ b/packages/dapp/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="title" content="OmniBridge" />
     <meta name="description" content="%REACT_APP_DESCRIPTION%" />
-    <meta name="coinzilla" content="d1bf69a26e8e17d7763ac773c3ed8986" />
+    <!-- <meta name="coinzilla" content="d1bf69a26e8e17d7763ac773c3ed8986" /> -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -42,6 +42,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script async src="https://coinzillatag.com/lib/display.js"></script>
+    <!-- <script async src="https://coinzillatag.com/lib/display.js"></script> -->
   </body>
 </html>
